# dnd-workshop

./: README.md  TODO  biome.json  package.json  pnpm-lock.yaml  vite.config.ts
.devcontainer/: devcontainer.json
scripts/: direct-message.ts
server/: Dockerfile  docker-compose.yml  go.mod  go.sum  local.yml  main.go
server/module/: match_handler.go  rpc.go  steam_web.go  utils.go
src/: index.css  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/http/: mod.rs  request.rs  response.rs
src/components/: application-window.tsx  current-profile.tsx  form-login.tsx  form-signup.tsx  login-form.tsx
src/components/dm/: app-sidebar.tsx  nav-actions.tsx  nav-main.tsx  nav-projects.tsx  nav-secondary.tsx  nav-user.tsx
src/components/ui/: sidebar.tsx  toast.tsx
src/hooks/: use-account.ts
src/lib/: commands.ts  dungeon-scrawl.ts  engine.ts  nakama-events.ts  nakama.ts  pixi-devtools.ts  update-check.tsx
src/lib/dungeon-scrawl/: example.json  parser.ts  reader.ts  types.ts  utils.ts  zip-reader.ts
src/routes/: __root.tsx  create-session.tsx  dm-session.$match-id.tsx  editor-session.tsx  home.tsx  index.tsx  join-session.tsx  login.tsx  pixi-devtools.tsx  player-session.$match-id.tsx  player.tsx  signup.tsx
