[package]
name = "dnd-workshop"
version = "0.1.0"
description = "remote dnd colabration app"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dnd_workshop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

# servo
#tauri-runtime-verso-build = { git = "https://github.com/versotile-org/tauri-runtime-verso.git" }

[dependencies]
# webkit

tauri = { version = "2", features = [] }
tokio-util = "0.7.17"
tokio = { version = "1.48.0", features = ["net", "macros"] }
log = "0.4.28"
# servo 
#tauri = { version = "2", default-features = true, features = ["common-controls-v6"] }
#tauri-runtime-verso = { git = "https://github.com/versotile-org/tauri-runtime-verso.git" }

tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-log = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

